--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -10,7 +10,7 @@
         <p>505 Walnut Ave. <br> Syracuse, NY 13210</p>
         <a href = "mailto:zzhou27@syr.edu">Ziyan Zhou Email</a> <br>
         <br>
-        <a href = "https://www.linkedin.com/in/ziyan-zhou-a21396173/"> <img src = "../images/LinkedIn-Logos/LI-In-Bug.png" width="30"> My LinkdedIn Profile</a> <br>
+        <a href = "https://www.linkedin.com/in/ziyan-zhou-a21396173/"> <img src = "../images/LinkedIn-Logos/LI-In-Bug.png" alt = "LinkedIn Logo" width="30"> My LinkdedIn Profile</a> <br>
         <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.756469600322!2d-76.13400308473757!3d43.046555179146765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a761bd0b81%3A0x2b9129d843ac90a9!2s505%20Walnut%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1631807340487!5m2!1sen!2sus" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </body>
