--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -27,7 +27,7 @@
             <br><br>
 
             <label for="contactmethod">How would you like to be contacted?</label>
-            <select id="contractmethod" name="contractmethod">
+            <select id="contactmethod" name="contactmethod">
                 <option value="phone">Phone</option>
                 <option value="email">Email</option>
                 <option value="WeChat">WeChat</option>
