--- a/lab07/index.html
+++ b/lab07/index.html
@@ -12,7 +12,7 @@
             <a href="contact.html">CONTACT</a>
         </nav>
 
-        <img src = "../images/Bio1.png" alt = "My Profile"> </a> <br>
+        <img src = "../images/Bio1.png" alt = "My Profile"> <br>
 
         <h1>Ziyan Zhou's Biography</h1>
         <p>
