--- a/lab10/index.html
+++ b/lab10/index.html
@@ -13,7 +13,9 @@
             <a href="contact.html">CONTACT</a>
         </nav>
 
-        <header> <img src = "../images/Bio1.png" alt = "My Profile"> <br> </header>
+        <div>
+        <header> <img class="bannerimage" src = "../images/Bio1.png" alt = "My Profile"> <br> </header>
+        </div>
 
         <main>
         <h1>Ziyan Zhou's Biography</h1>
