--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -11,8 +11,8 @@
 
     <body>
         <nav>
-            <a href="index.html">HOME</a> |
-            <a href="skills.html">SKILLS</a> |
+            <a href="index.html">HOME</a> <span>|</span>
+            <a href="skills.html">SKILLS</a> <span>|</span>
             <a href="contact.html">CONTACT</a>
         </nav>
 
@@ -28,7 +28,7 @@
             <div class="links">
             <a href = "mailto:zzhou27@syr.edu">Ziyan Zhou Email</a> <br>
             <br>
-            <a href = "https://www.linkedin.com/in/ziyan-zhou-a21396173/"> <img src = "../images/scaled3.png" alt = "LinkedIn Logo"> My LinkdedIn Profile</a> <br>
+            <a href = "https://www.linkedin.com/in/ziyan-zhou-a21396173/"> <img src = "../images/scaled3.png" alt = "LinkedIn Logo">LinkdedIn</a> <br>
             <br>
             </div>
 
@@ -55,7 +55,7 @@
                     <input type="text" id="name" name="fname">
                     <br><br>
 
-                    <label for="contactmethod">How would you like to be contacted?</label>
+                    <label for="contactmethod">Contact Method</label>
                     <select id="contactmethod" name="contactmethod">
                         <option value="phone">Phone</option>
                         <option value="email">Email</option>
@@ -68,7 +68,7 @@
                     <br><br>
 
                     <label for="message">Please leave your message:</label> <br>
-                    <textarea id="message" rows="5" cols="50" name="message">Enter your message here. </textarea>
+                    <textarea id="message" rows="5" cols="35" name="message">Enter your message here. </textarea>
                     <br><br>
 
                     <input type="submit" value="Send Message">
