--- a/lab10/index.html
+++ b/lab10/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">HOME</a> |
-            <a href="skills.html">SKILLS</a> |
+            <a href="index.html">HOME</a> <span>|</span>
+            <a href="skills.html">SKILLS</a> <span>|</span>
             <a href="contact.html">CONTACT</a>
         </nav>
 
@@ -57,7 +57,7 @@
 
         <footer>
         &#169;2020
-        <div class="quote"> “Beauty perishes in life, but is immortal in art” ——— Leonardo da Vinci </div>
+        <div class="quote"> “Beauty perishes in life, but is immortal in art” —— Leonardo da Vinci </div>
         </footer>
     </body>
 </html>
