--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -9,8 +9,8 @@
 
     <body>
         <nav>
-            <a href="index.html">HOME</a> |
-            <a href="skills.html">SKILLS</a> |
+            <a href="index.html">HOME</a> <span>|</span>
+            <a href="skills.html">SKILLS</a> <span>|</span>
             <a href="contact.html">CONTACT</a>
         </nav>
 
