--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="images/LOGO.png" width="70">
+        <img src="images/LOGO.png" width="70" alt="Logo">
         <h3>LOCOROCO VENDING PROJECT</h3>
     </div>
 
@@ -25,7 +25,7 @@
     <div>
         <div>
             <div>
-                <img src="images/phase1.JPG" width="300"> 
+                <img src="images/phase1.JPG" width="300" alt="Phase 1"> 
             </div>
 
             <div>
@@ -41,13 +41,13 @@
             </div>  
 
             <div>
-                <img src="images/phase2.JPG" width="300">
+                <img src="images/phase2.JPG" width="300" alt="Phase 2">
             </div>
         </div>
 
         <div>
             <div>
-                <img src="images/phase3.JPG" width="300">
+                <img src="images/phase3.JPG" width="300" alt="Phase 3">
             </div>
 
             <div>
@@ -63,13 +63,13 @@
             </div>
 
             <div>
-                <img src="images/phase4.JPG" width="300">
+                <img src="images/phase4.JPG" width="300" alt="Phase 4">
             </div>
         </div>
 
         <div>
             <div>
-                <img src="images/phase5.JPG" width="300">
+                <img src="images/phase5.JPG" width="300" alt="Phase 5">
             </div>
 
             <div>
@@ -85,13 +85,13 @@
             </div>
 
             <div>
-                <img src="images/phase6.JPG" width="300">
+                <img src="images/phase6.JPG" width="300" alt="Phase 6">
             </div>
         </div>
 
         <div>
             <div>
-                <img src="images/phase7.JPG" width="300">
+                <img src="images/phase7.JPG" width="300" alt="Phase 7">
             </div>
 
             <div>
@@ -107,13 +107,13 @@
             </div>
 
             <div>
-                <img src="images/phase8.JPG" width="300">
+                <img src="images/phase8.JPG" width="300" alt="Phase 8">
             </div>
         </div>
 
         <div>
             <div>
-                <img src="images/phase9.JPG" width="300">
+                <img src="images/phase9.JPG" width="300" alt="Phase 9">
             </div>
 
             <div>
@@ -129,7 +129,7 @@
             </div>
 
             <div>
-                <img src="images/phase10.JPG" width="300">
+                <img src="images/phase10.JPG" width="300" alt="Phase 10">
             </div>
         </div>
     </div>
