--- a/project/index.html
+++ b/project/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="images/LOGO.png" width="70">
+        <img src="images/LOGO.png" width="70" alt="Logo">
         <h3>LOCOROCO VENDING PROJECT</h3>
     </div>
 
@@ -21,7 +21,7 @@
     </nav>
 
     <div>
-        <img src="images/vacations-architecture-buildings-old-town-thumbnail.jpg">
+        <img src="images/vacations-architecture-buildings-old-town-thumbnail.jpg" alt="Street Vendors">
     </div>
 
     <h2>LocoRoco Vending Project</h2>
@@ -84,19 +84,19 @@
 
     <div>
         <div>
-            <img src="images/7.JPG" width="300">
+            <img src="images/7.JPG" width="300" alt="Page Example 1">
         </div>
 
         <div>
-            <img src="images/2.JPG" width="300">
+            <img src="images/2.JPG" width="300" alt="Page Example 2">
         </div>
 
         <div>
-            <img src="images/3.JPG" width="300">
+            <img src="images/3.JPG" width="300" alt="Page Example 3">
         </div>
 
         <div>
-            <img src="images/5.JPG" width="300">
+            <img src="images/5.JPG" width="300" alt="Page Example 4">
         </div>
 
         <div>
