--- a/project/Contact.html
+++ b/project/Contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="images/LOGO.png" width="70">
+        <img src="images/LOGO.png" width="70" alt="Logo">
         <h3>LOCOROCO VENDING PROJECT</h3>
     </div>
 
