--- a/project/Donate.html
+++ b/project/Donate.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="images/LOGO.png" width="70">
+        <img src="images/LOGO.png" width="70" alt="Logo">
         <h3>LOCOROCO VENDING PROJECT</h3>
     </div>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div>
-            <img src="images/body diagram-04.jpg" width="600">
+            <img src="images/body diagram-04.jpg" width="600" alt="Fear and Stress of Street Vendors">
         </div>
 
         <div>
