--- a/project/Donate.html
+++ b/project/Donate.html
@@ -34,7 +34,7 @@
         </div>
 
         <div>
-            <img src="images/body diagram-04.jpg" width="600" alt="Fear and Stress of Street Vendors">
+            <img src="images/Body.jpg" width="600" alt="Fear and Stress of Street Vendors">
         </div>
 
         <div>
@@ -58,11 +58,11 @@
 
     <div>
         <div>
-            <input type="donate" value="CONTRIBUTE AS A GUEST">
+            <button type="button">CONTRIBUTE AS A GUEST</button>
         </div>
 
         <div>
-            <input type="donate" value="CONTRIBUTE AS A MEMBER">
+            <button type="button">CONTRIBUTE AS A MEMBER</button>
         </div>
     </div>
 </body>
