--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-    <head lang="en">
+    <head>
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--make the website load full size on mobil devices, must be in head tags-->
