--- a/project/AboutUs.html
+++ b/project/AboutUs.html
@@ -5,54 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="ProjectSylesheet.css">
+
+    <style>
+        .firstpart, .secondpart {
+            display: flex;
+        }
+
+        .text {
+            padding-left: 60px;
+            padding-right: 30px;
+        }
+
+        .text div {
+            margin-bottom: 100px;
+            margin-top: 20px;
+            text-align: justify;
+        }
+
+        h3 {
+            text-align: center;
+        }
+
+        strong {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <img src="images/LOGO.png" width="70" alt="Logo">
-        <h3>LOCOROCO VENDING PROJECT</h3>
-    </div>
+    <header>
+        <img src="images/LOGO.png" width="100" alt="Logo">
+        <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
+    </header>
 
     <nav>
-        <a href="index.html">HOME</a> <span>|</span>
-        <a href="AboutUs.html">ABOUT US</a> <span>|</span>
-        <a href="LocoRocoVendingProject.html">PROJECT</a> <span>|</span>
-        <a href="Contact.html">CONTACT</a> <span>|</span>
+        <a href="index.html">HOME</a> 
+        <a href="AboutUs.html">ABOUT US</a> 
+        <a href="LocoRocoVendingProject.html">PROJECT</a> 
+        <a href="Contact.html">CONTACT</a> 
         <a href="Donate.html">DONATE</a>
     </nav>
 
     <h1>About Us</h1>
 
-    <div>
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/m6mnHINfRZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
+    <main>
+        <div class="firstpart">
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/m6mnHINfRZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+                
+                <h3>Project Introduction</h3>
+            </div>
+
+            <div class="text">
+                <div>
+                    <strong>WHAT</strong> <br>
+                    We hope to create a system to assist the vendors with problems they face on a normal basis. By opening them up to more connections as well as providing a community for support, we aim to make the vending system better for working vendors. 
+                </div>
+
+                <div>
+                    <strong>WHY</strong> <br>
+                    Vendors run into many problems, including ticketing, regulations, travel, cost, and more. Their business is regulated by many different government authorities as well as other outside agencies. Connections to wholesale food can also cause a lot of trouble to vendors, due to the regulation on what can be sold and how.
+                </div>
+            </div>
         </div>
 
-        <div>
-            <strong>WHAT</strong> <br>
-            We hope to create a system to assist the vendors with problems they face on a normal basis. By opening them up to more connections as well as providing a community for support, we aim to make the vending system better for working vendors. 
-        </div>
+        <div class="secondpart">
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HjDcMY8S4C8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
 
-        <div>
-            <strong>WHY</strong> <br>
-            Vendors run into many problems, including ticketing, regulations, travel, cost, and more. Their business is regulated by many different government authorities as well as other outside agencies. Connections to wholesale food can also cause a lot of trouble to vendors, due to the regulation on what can be sold and how.
-        </div>
-    </div>
+                <h3>Project Prospection</h3>
+            </div>
 
-    <div>
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HjDcMY8S4C8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+            <div class="text">
+                <div>
+                    <strong>HOW</strong> <br>
+                    By demonstrating the steps required to form this support organization, we can show others how this might be set up. By looking into how vendors can connect with different groups (restaurants, markets, etc.) and collaborate, our aim is to grow the vending system already in place so that it is a beneficial system for vendors.
+                </div>
 
-        <div>
-            <strong>HOW</strong> <br>
-            By demonstrating the steps required to form this support organization, we can show others how this might be set up. By looking into how vendors can connect with different groups (restaurants, markets, etc.) and collaborate, our aim is to grow the vending system already in place so that it is a beneficial system for vendors.
+                <div>
+                    <strong>WHO ARE WE</strong> <br>
+                    As the designers of this handbook, our role is just to demonstrate the process and leave spaces for further growth of the handbook. Our role is not as the leading group of this organization, just as spectators who update the handbook.
+                </div>
+            </div>
         </div>
-
-        <div>
-            <strong>WHO ARE WE</strong> <br>
-            As the designers of this handbook, our role is just to demonstrate the process and leave spaces for further growth of the handbook. Our role is not as the leading group of this organization, just as spectators who update the handbook.
-        </div>
-    </div>
+    </main>
 </body>
 </html>
