--- a/project/LocoRocoVendingProject.html
+++ b/project/LocoRocoVendingProject.html
@@ -5,137 +5,212 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="ProjectSylesheet.css">
+
+    <style>
+        .handbook {
+            margin-left: 180px;
+        }
+
+        .row1, .row2, .row3, .row4, .row5 {
+            display: flex;
+        }
+
+        .phase {
+            padding: 20px;
+            font-size: 0.88em;
+        }
+
+        .down {
+            display: flex;
+            justify-content: center;
+            margin: 10px;
+            padding: 0px;
+        }
+
+        .first {
+            text-align: left;
+            position: relative;
+            left: -50px;
+            background-color: rgb(255, 255, 120);
+            padding: 20px;
+            border-radius: 1em;
+        }
+
+        .second {
+            text-align: right;
+            position: relative;
+            right: -50px;
+            background-color: rgb(255, 255, 120);
+            padding: 20px;
+            border-radius: 1em;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <img src="images/LOGO.png" width="70" alt="Logo">
-        <h3>LOCOROCO VENDING PROJECT</h3>
-    </div>
+    <header>
+        <img src="images/LOGO.png" width="100" height="100" alt="Logo">
+        <h2>LOCOROCO <br> VENDING <br> PROJECT</h2>
+    </header>
 
     <nav>
-        <a href="index.html">HOME</a> <span>|</span>
-        <a href="AboutUs.html">ABOUT US</a> <span>|</span>
-        <a href="LocoRocoVendingProject.html">PROJECT</a> <span>|</span>
-        <a href="Contact.html">CONTACT</a> <span>|</span>
+        <a href="index.html">HOME</a>
+        <a href="AboutUs.html">ABOUT US</a>
+        <a href="LocoRocoVendingProject.html">PROJECT</a>
+        <a href="Contact.html">CONTACT</a>
         <a href="Donate.html">DONATE</a>
     </nav>
 
     <h1>LocoRoco Vending Project</h1>
 
-    <div>
-        <div>
+    <a class="handbook" href="https://dcfd6443-8984-40d6-8a6b-e2b32f1ffcfd.filesusr.com/ugd/1ea71e_6fb6d8ef5fe34f858571c14a225f97cc.pdf"> <button type="button">DOWNLOAD HANDBOOK</button></a>
+
+    <main>
+        <div class="row1">
             <div>
-                <img src="images/phase1.JPG" width="300" alt="Phase 1"> 
+                <img src="images/phase1.JPG" width="310" height="300" alt="Phase 1"> 
             </div>
 
-            <div>
-                <div>
+            <div class="phase">
+                <div class="first">
                     <strong>PHASE 1: FUND ESTABLISHMENT & PARTNER INVITATION</strong> <br>
-                    This is the preparation phase of the project, and the basic actions would be done by the designer. This phase aims to 1) establish a fund for street vendors’ cart and commissary fees and 2) initiate a partnership with non-profit organization The Street Vendor Project (SVP) in NYC. Vendors could learn about the types of service that SVP provides to the community by reading through this part of the handbook and help advertise the new established fund to other communities.
+                    This is the preparation phase of the project, and the basic actions would be done by the designer. This phase aims to 1) establish a fund for street vendors’ cart and commissary fees and 2) initiate a partnership with non-profit organization The Street Vendor Project (SVP) in NYC.
                 </div>
 
-                <div>
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
+                </div>
+
+                <div class="second">
                     <strong>PHASE 2: PROJECT INTRO & OPINION COLLECTION</strong> <br>
                     In this phase, designers will introduce the project and give out this handbook to street vendors. Vendors could express their aspirations and ideas about the project and process by attending the meetings or by filling out the surveys. 
+                </div>
+
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
                 </div>
             </div>  
 
             <div>
-                <img src="images/phase2.JPG" width="300" alt="Phase 2">
+                <img src="images/phase2.JPG" width="310" height="300" alt="Phase 2">
             </div>
         </div>
 
-        <div>
+        <div class="row2">
             <div>
-                <img src="images/phase3.JPG" width="300" alt="Phase 3">
+                <img src="images/phase3.JPG" width="310" height="270" alt="Phase 3">
             </div>
 
-            <div>
-                <div>
+            <div class="phase">
+                <div class="first">
                     <strong>PHASE 3: CONTACT WITH THIRD-PARTY ORGANIZATION</strong> <br>
                     In this phase, vendors' representatives would communicate with restaurants, markets, and mobile app development company through email, meetings, and handouts.
                 </div>
 
-                <div>
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
+                </div>
+
+                <div class="second">
                     <strong>PHASE 4: DESIGN EXAMPLE</strong> <br>
                     This phase provides a pre-designed proposal of the physical kit for vendors to reference and design a kit themselves. 
+                </div>
+
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
                 </div>
             </div>
 
             <div>
-                <img src="images/phase4.JPG" width="300" alt="Phase 4">
+                <img src="images/phase4.JPG" width="310" height="270" alt="Phase 4">
             </div>
         </div>
 
-        <div>
+        <div class="row3">
             <div>
-                <img src="images/phase5.JPG" width="300" alt="Phase 5">
+                <img src="images/phase5.JPG" width="310" height="300" alt="Phase 5">
             </div>
 
-            <div>
-                <div>
+            <div class="phase">
+                <div class="first">
                     <strong>PHASE 5: PHYSICAL KIT & MOBLIE APP DEVELOPMENT </strong> <br>
                     In this phase, vendors would completely take over the project from the designers. They would fill out the surveys to design the physical kit and online app themselves based on their own demands and opinions as well as any other features from collaboration.
                 </div>
 
-                <div>
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
+                </div>
+
+                <div class="second">
                     <strong>PHASE 6: TUTORIAL FORUM</strong> <br>
                     In this phase, vendors would organize forums by themselves, and representatives would teach other vendors how to assemble the kit and how to use the mobile APP when the designs are put into use.
+                </div>
+
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
                 </div>
             </div>
 
             <div>
-                <img src="images/phase6.JPG" width="300" alt="Phase 6">
+                <img src="images/phase6.JPG" width="310" height="300" alt="Phase 6">
             </div>
         </div>
 
-        <div>
+        <div class="row4">
             <div>
-                <img src="images/phase7.JPG" width="300" alt="Phase 7">
+                <img src="images/phase7.JPG" width="310" height="300" alt="Phase 7">
             </div>
 
-            <div>
-                <div>
+            <div class="phase">
+                <div class="first">
                     <strong>PHASE 7: WEEKLY GATHERING</strong> <br>
                     In this phase vendors would start organizing meetings weekly to keep the project going by discussing other problems they are facing in their daily life and teach those who want to become a street vendor in the future how what to do and how to apply. 
                 </div>
 
-                <div>
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
+                </div>
+
+                <div class="second">
                     <strong>PHASE 8: PROMOTION & ADVERTISEMENT</strong> <br>
                     This phase, vendors would promote the project and system to other street vendors, restaurants, markets, cart companies, and commissaries through different forms of advertisement. 
+                </div>
+
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
                 </div>
             </div>
 
             <div>
-                <img src="images/phase8.JPG" width="300" alt="Phase 8">
+                <img src="images/phase8.JPG" width="310" height="300" alt="Phase 8">
             </div>
         </div>
 
-        <div>
+        <div class="row5">
             <div>
-                <img src="images/phase9.JPG" width="300" alt="Phase 9">
+                <img src="images/phase9.JPG" width="310" height="300" alt="Phase 9">
             </div>
 
-            <div>
-                <div>
+            <div class="phase">
+                <div class="first">
                     <strong>PHASE 9: PRACTICE IN OTHER CITIES</strong> <br>
                     This phase vendors would start applying the project in other cities to fulfill a more widespread use.
                 </div>
 
-                <div>
+                <div class="down">
+                    <img src="icon/down.png" alt="Down Icon" height="20">
+                </div>
+
+                <div class="second">
                     <strong>PHASE 10: SYSTEM MAINTENANCE</strong> <br>
                     This is the continuing final phase of the project. In this phase, vendors decide whether they want to join the maintenance of this project after a free trial of 2 months and make their contribution to the fund every month. Vendors would create mutual-aid network by helping and communicating with each other on a regular basis.
                 </div>
             </div>
 
             <div>
-                <img src="images/phase10.JPG" width="300" alt="Phase 10">
+                <img src="images/phase10.JPG" width="310" height="300" alt="Phase 10">
             </div>
         </div>
-    </div>
-
-    <div>
-        <a href="https://dcfd6443-8984-40d6-8a6b-e2b32f1ffcfd.filesusr.com/ugd/1ea71e_6fb6d8ef5fe34f858571c14a225f97cc.pdf">DOWNLOAD HANDBOOK</a>
-    </div>
+    </main>
 </body>
 </html>
