--- a/project/index.html
+++ b/project/index.html
@@ -152,7 +152,7 @@
             </div>
         </div>
 
-        <section class="shortsections">
+        <div class="shortsections">
             <div class="firstrow">
                 <div>
                     Solidarity among the street vendors within a certain area could improve the sense of community and security. 
@@ -211,7 +211,7 @@
                     <a href="Donate.html"> <img src="icon/donate.png" alt="Donate Icon" height="40"> <br> DONATE</a>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 
     <div class="handbookdisplay">
@@ -232,7 +232,7 @@
         </div>
     </div>
 
-    <a class="handbooklink" href="https://dcfd6443-8984-40d6-8a6b-e2b32f1ffcfd.filesusr.com/ugd/1ea71e_6fb6d8ef5fe34f858571c14a225f97cc.pdf"> <button type="button">DOWNLOAD HANDBOOK</button></a>
+    <a class="handbooklink" href="https://dcfd6443-8984-40d6-8a6b-e2b32f1ffcfd.filesusr.com/ugd/1ea71e_6fb6d8ef5fe34f858571c14a225f97cc.pdf"> DOWNLOAD HANDBOOK </a>
 
     <footer>
         &#169;vendorpower2021
